etcdserverpb: add "retry" flag to WatchResponse
Problem: client relies on string value of CancelReason to
determine if watcher should be retried. This is too fragile.
See https://github.com/etcd-io/etcd/discussions/14992

Solution: add explicit `retry` flag

fixes: https://github.com/etcd-io/etcd/issues/15058
